# Copyright: (C) 2014 RobotCub Consortium
# Author: ---
# CopyPolicy: Released under the terms of the GNU GPL v2.0.

add_subdirectory(contactPosRootConverter)
##add_subdirectory(faceDetector)
add_subdirectory(handCtrl)
add_subdirectory(nearThingsDetector)
add_subdirectory(reachCtrl)
##add_subdirectory(removeHands)

